@@ -155,4 +155,7 @@
 2010-02-20:
 - Added a missing call to Login() in FritzClient::InitCall()
 - Do not initiate a call if no number is given in FritzClient::InitCall()
-  
+
+2010-02-25:
+- Implemented FritzClient::getCurrentIP and FritzClient::reconnectISP
+ 
